// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PageHeader > renders title only 1`] = `
<div>
  <header
    class="flex items-start justify-between gap-6 pt-8 pb-6 shadow-hairline-b"
  >
    <div
      class="min-w-0"
    >
      <h1
        class="font-display tracking-tightest text-ink text-[2rem] leading-[1.05]"
      >
        Funis
      </h1>
    </div>
  </header>
</div>
`;

exports[`PageHeader > renders with eyebrow + description + actions 1`] = `
<div>
  <header
    class="flex items-start justify-between gap-6 pt-8 pb-6 shadow-hairline-b"
  >
    <div
      class="min-w-0"
    >
      <div
        class="text-2xs text-ink-dim mb-2 font-medium tracking-[0.14em] uppercase"
      >
        Visão geral
      </div>
      <h1
        class="font-display tracking-tightest text-ink text-[2rem] leading-[1.05]"
      >
        Operação
      </h1>
      <p
        class="text-ink-muted mt-2 max-w-2xl text-[0.9375rem] leading-relaxed"
      >
        Resumo em tempo real
      </p>
    </div>
    <div
      class="flex shrink-0 items-center gap-2"
    >
      <button
        type="button"
      >
        Atualizar
      </button>
    </div>
  </header>
</div>
`;
